--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,20 @@ iframe{
    1. Basic Styles
 ================================================== */
 
+/* update new style */
+#update_styke{
+	width: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.call_row_div {
+    width: 30%;
+    display: flex;
+    align-items: center;
+}
+/* update new style */
+
 html, body {
 	height: 100%;
 }
@@ -1458,17 +1472,15 @@ body.boxed .body{
 	text-align:center;
 	line-height:40px;
 	color:#fff;
-	display:inline-block;
 	float:right;
-	margin-left:35px;
 }
 #info-content{
 	display:none;
 	width:250px;
 	position:absolute;
 	top:62px;
-	right:15px;
-	z-index:9;
+	/* right:15px; */
+	z-index:9999999999999999;
 	margin:0;
 	list-style-type:none;
 }
@@ -1490,7 +1502,7 @@ body.boxed .body{
 	position:absolute;
 	top:-20px;
 	z-index:9;
-	right:12px;
+	left:12px;
 }
 .header-style3 #info-content:before{
 	display:none;
