--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,50 @@ Author:	imithemes
 @import url("font-awesome.css");
 @import url("line-icons.css");
 @import url("animations.css");
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,700,700italic);
-@import url(https://fonts.googleapis.com/css?family=Unica+One);
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic);
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
+/* font family class */
+.tajawal_extralight {
+    font-family: "Tajawal", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+  }
 
+  .tajawal_light {
+    font-family: "Tajawal", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+
+  .tajawal_regular {
+    font-family: "Tajawal", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .tajawal_medium {
+    font-family: "Tajawal", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  .tajawal_bold {
+    font-family: "Tajawal", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  .tajawal_extrabold {
+    font-family: "Tajawal", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  .tajawal_black {
+    font-family: "Tajawal", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+/* font family class */
 
 /*------------------------------------------------------------------
 [Table of contents]
@@ -76,6 +116,44 @@ iframe{
 ================================================== */
 
 /* update new style */
+.topbar {
+    background: #283b6a;
+}
+#info-content{
+	opacity:0;
+	width:250px;
+	position:fixed;
+	top:62px;
+	margin:0;
+	list-style-type:none;
+}
+/* أساسي للرسوم المتحركة */
+@keyframes toggleAnimation {
+    0% {
+        transform: rotate(0deg);
+        color: white;
+    }
+    50% {
+        transform: rotate(180deg);
+        color: #2f4688;
+    }
+    100% {
+        transform: rotate(360deg);
+        color: #616997;
+    }
+}
+
+.toggleIcon {
+    transition: color 0.5s ease-in-out, transform 0.5s ease-in-out;
+	font-size: 30px;
+    line-height: 40px;
+}
+
+.toggled {
+    animation: toggleAnimation 0.5s forwards;
+    color: white;
+}
+
 #update_styke{
 	width: 50%;
 	display: flex;
@@ -86,6 +164,72 @@ iframe{
     width: 30%;
     display: flex;
     align-items: center;
+}
+.vertical-center,
+.vertical-bottom,
+.style_to_bg_before{
+	position: relative;
+}
+.vertical-center::before{
+	content: "";
+	position: absolute;
+	top: 0;
+	z-index: 1000;
+	width: 100%;
+	height: 500px;
+	background-color: rgba(0, 0, 0, 0.527);
+}
+.vertical-bottom::before{
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 1000;
+	width: 100%;
+	height: 500px;
+	background-color: rgba(0, 0, 0, 0.527);
+}
+.style_to_bg_before{
+	z-index: 2000;
+}
+.flex-caption-table{
+	width: 55%;
+}
+.flex_list_sliders{
+	display: flex;
+	margin: 0 !important;
+}
+.element_list_slider{
+	width: 30% !important;
+	height: auto !important;
+	text-align: center;
+}
+.parent_list_slider {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    height: 100px;
+    border-radius: 50%;
+	transition: 0.5s;
+    width: 100px;
+    align-items: center;
+	margin-left: 15%;
+}
+.parent_list_slider:hover{
+	box-shadow: 0 0 0 9px rgb(0 0 0 / 21%);
+	transform: translateY(-7px);
+}
+.icons_img_to_slider {
+    display: flex;
+	width: 50%;
+    height: 50%;
+}
+.icons_img_to_slider img {
+    width: 100%;
+    height: 100%;
+}
+.element_list_slider h4{
+	color: white;
 }
 /* update new style */
 
@@ -210,7 +354,7 @@ h6{
 	color:#222;
 	font-weight:400;
 	line-height:1.3em;
-	font-family:"Playfair Display", serif;
+	font-family:"Tajawal", sans-serif;
 }
 h1{
 	font-size:40px;
@@ -283,7 +427,7 @@ blockquote p{
 	font-size:17px;
 	line-height:1.7em;
 	font-weight:400;
-	font-family:"Playfair Display", serif;
+	font-family:"Tajawal", sans-serif;
 	border-left:2px solid #eee;
 	margin-left:30px;
 	padding-left:20px;
@@ -1172,7 +1316,7 @@ html[xmlns] .slides {
 	font-size:15px;
 	line-height:32px;
 	font-style:italic;
-	font-family: 'Playfair Display', cursive;
+	font-family: "Tajawal", sans-serif;
 }
 .basic-link .icon-arrow-right{
 	position:relative;
@@ -1334,7 +1478,7 @@ body{
 	color:#858e97;
 	font-size:15px;
 	font-weight:400;
-	font-family:"Roboto", sans-serif;
+	font-family:"Tajawal", sans-serif;
 	line-height:1.55em;
 	background-attachment:fixed;
 	overflow-x:hidden;
@@ -1362,7 +1506,6 @@ body.boxed .body{
 	}
 }
 .topbar{
-	background:#3d4143;
 	padding:5px 0;
 	overflow:hidden;
 }
@@ -1466,6 +1609,9 @@ body.boxed .body{
 .site-header .container{
 	position:relative;
 }
+.menu_top_header{
+	position: relative;
+}
 #info-toggle{
 	width:40px;
 	height:40px;
@@ -1474,16 +1620,7 @@ body.boxed .body{
 	color:#fff;
 	float:right;
 }
-#info-content{
-	display:none;
-	width:250px;
-	position:absolute;
-	top:62px;
-	/* right:15px; */
-	z-index:9999999999999999;
-	margin:0;
-	list-style-type:none;
-}
+
 .header-style3 #info-content{
 	display:block;
 	position:static;
@@ -1576,7 +1713,7 @@ body.boxed .body{
 	margin:0;
 	list-style-type:none;
 	display:block;
-	font-family:"Playfair Display", serif;
+	font-family:"Tajawal", sans-serif;
 }
 #menu-toggle{
 	display:none;
@@ -1721,7 +1858,7 @@ body.boxed .body{
 	letter-spacing:1px;
 	color:#fff;
 	text-align:left;
-	font-family:"Roboto",sans-serif;
+	font-family:"Tajawal", sans-serif;
 	text-transform:uppercase;
 }
 .dd-menu .megamenu-container ul li{
@@ -1769,7 +1906,6 @@ body.boxed .body{
 	background-color:#666;
 }
 .flex-caption-table{
-	width:100%;
 	display:table;
 	vertical-align:middle;
 }
@@ -1851,7 +1987,7 @@ body.boxed .body{
 	z-index:1;
 }
 .notice-bar .btn span{
-	font-family:"Playfair Display", serif;
+	font-family:"Tajawal", sans-serif;
 	font-size:21px;
 	font-weight:400;
 	text-transform:none;
@@ -1952,7 +2088,7 @@ body.boxed .body{
 }
 .featured-block-info .subtitle{
 	text-transform:uppercase;
-	font-family:"Roboto", sans-serif;
+	font-family:"Tajawal", sans-serif;
 	font-weight:700;
 	font-size:13px;
 	margin-bottom:18px;
@@ -2627,7 +2763,7 @@ body.boxed .body{
 .comments li h5 span{
 	color:#999;
 	font-weight:400;
-	font-family:"Lora", serif;
+	font-family:"Tajawal", sans-serif;
 }
 .post-comment-content{
 	padding-left:100px;
@@ -2915,7 +3051,7 @@ body.boxed .body{
 	margin-left:6px;
 }
 .footer_widget h4.widgettitle{
-	font-family:"Roboto", sans-serif;
+	font-family:"Tajawal", sans-serif;
 	text-transform:uppercase;
 	border-bottom:0;
 	color:#fff;
@@ -3327,7 +3463,7 @@ body.boxed .body{
 }
 .icon-box h3 {
 	font-size:19px;
-	font-family:"Roboto", sans-serif;
+	font-family:"Tajawal", sans-serif;
 	margin-bottom:0;
 	font-weight:400;
 }
